--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
   <script src="js/jquery-1.8.3.min.js"></script>
   <script src="js/batman.jquery.js"></script>
-  <script src="js/app.js"></script>
+  <script src="dist/js/app.js"></script>
   <script>
     $(document).ready(function() {
       YieldDemo.run()
