--- a/index.html
+++ b/index.html
@@ -8,10 +8,15 @@
 <body>
 
   <div id="content" data-yield="main" class="container"></div>
+  <article id="article" data-yield="article" class="container"></article>
 
   <script src="js/jquery-1.8.3.min.js"></script>
   <script src="js/batman.jquery.js"></script>
   <script src="dist/js/app.js"></script>
+  <script src="dist/js/models.js"></script>
+  <script src="dist/js/controllers.js"></script>
+  <script src="dist/js/helpers.js"></script>
+  <script src="dist/js/views.js"></script>
   <script>
     $(document).ready(function() {
       YieldDemo.run()
