Deep nav and switching lessons and home work.

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 
   <div id="content" data-yield="main" class="container"></div>
   <article id="article" data-yield="article" class="container"></article>
+  <article id="lesson" data-yield="lesson" class="container"></article>
 
   <script src="js/jquery-1.8.3.min.js"></script>
   <script src="js/batman.jquery.js"></script>
