--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
   <article id="article" data-yield="article" class="container"></article>
   <nav class="toc well">
     <ul class="nav nav-list">
+      <li class="nav-header"><a data-route="routes.mains">Home</a></li>
       <li class="nav-header">Articles</li>
       <li data-foreach-article="articles" data-addclass="article.active">
         <a data-bind="article.type | pluralize | humanize" data-bind-id="article.id" data-route="routes.articles[article]"></a>
@@ -18,6 +19,7 @@
     </ul>
   </nav>
 
+  <footer>Batman.js Demo.</footer>
   <script src="js/jquery-1.8.3.min.js"></script>
   <script src="js/batman.jquery.js"></script>
   <script src="dist/js/namespace.js"></script>
@@ -26,6 +28,7 @@
   <script src="dist/js/controllers.js"></script>
   <script src="dist/js/helpers.js"></script>
   <script src="dist/js/views.js"></script>
+  <script src="js/batman.utility.belt.js"></script>
   <script>
     $(document).ready(function() {
       YieldDemo.run()
